Removed some unneeded variables.

--- a/config-example.json
+++ b/config-example.json
@@ -1,5 +1,3 @@
 {
-    "description": "Hello! I'm Mallard, the DuckDuckGo Bot for the Programming Discord Server.",
-    "discord_token": "",
-    "prefix": "?"
+    "discord_token": ""
 }
