--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiohttp==2.2.5
 async-timeout==1.2.1
 chardet==3.0.4
 -e git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py
--e git+https://github.com/strinking/python-duckduckgo#egg=duckduckgo
+-e git+https://github.com/strinking/python-duckduckgo@async#egg=duckduckgo
 multidict==3.1.3
 websockets==3.4
 yarl==0.12.0
