--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp>=2.2.0
 async-timeout>=1.2.0
 chardet>=3.0.0
 multidict>=3.1.0
+ratelimit>=1.4.0
 websockets>=3.0
 yarl>=0.12.0
 git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py[voice]
