General improvements to mallard (#7)
* Improve deployment.

* Change config to YAML.

* Add license.

* Split __main__ into submodules, and add main logic.

* Fix pylint warnings.

* Add Travis config.

* Fix duckduckgo pip issue.

* Fix pip requirement for duckduckgo-async.

* Ignore logs.

* Fix runtime errors.

* Add sample config.

* Add pylint suppression for embed creation.

* Explicitly add dependency for DuckDuckGo.

* Change title of embed.

* Ignore empty queries.

* Update python-duckduckgo branch.

* Address review comments.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
-# Python Bytecode Cache
+# Artifacts
 __pycache__/
+*.py[cod]
 
-# Configuration File
-config.json
+# Dependencies
+src/
 
-# Python Virtual Environment
+# Logging
+*.log
+
+# Secret data
+/config*.yaml
+
+# Deployment
 venv/
+
+# Misc
+*~
+*.bak
+.*.swp
+
