Add help command (#8)
* Change config to YAML.

* Split __main__ into submodules, and add main logic.

* Fix pylint warnings.

* Fix pip requirement for duckduckgo-async.

* Ignore logs.

* Add bot info and something else.

* Bump version to 0.4.0

* Fix pylint warnings after rebase.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ __pycache__/
 # Logging
 *.log
 
+# Dependencies
+src/
+
+# Logging
+*.log
+
 # Secret data
 /config*.yaml
 
@@ -16,4 +22,3 @@ venv/
 *~
 *.bak
 .*.swp
-
