Add ratelimit logging.

--- a/misc/config.yaml
+++ b/misc/config.yaml
@@ -9,6 +9,11 @@ mentions:
 
 color: dark_teal
 
+ratelimit:
+  queries: 2
+  per_seconds: 10
+  log: ratelimit_violations.log
+
 bot:
   username: MyGreatBot#1000
   token: 'MMMMMMMMMMMMMMMMMMMMMMMM.AAAAAA.BBBBBBBBBBBBBBBBBBBBBBBBBBB'
