--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - pylint mallard
+  - pylint --reports=yes mallard
 
 notifications:
   email:
