--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ PyYAML>=3.10
 aiohttp>=2.2.0
 async-timeout>=1.2.0
 chardet>=3.0.0
+discord.py>=1.0.1
 multidict>=3.1.0
 ratelimit>=1.4.0
 websockets>=3.0
 yarl>=0.12.0
-git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py
 -e git+https://github.com/strinking/python-duckduckgo@master#egg=duckduckgo-async
