--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ PyYAML>=3.10
 aiohttp>=2.2.0
 async-timeout>=1.2.0
 chardet>=3.0.0
-discord.py>=1.0.1
+discord.py>=1.0.1,<2
 multidict>=3.1.0
 ratelimit>=1.4.0
 websockets>=3.0
